@@ -4,10 +4,10 @@ import java.util.ArrayList;
 
 public class ComputationalGraph {
 
-    ArrayList<CompGraphNode> nodes = new ArrayList<CompGraphNode>();
+    ArrayList<CompGraphNode> nodes = new ArrayList<>();
 
-    public void addNode(Tensor result, ArrayList<Tensor> components, String operation) {
-        nodes.add(new CompGraphNode(result, components, operation));
+    public void addNode(Tensor result, ArrayList<Tensor> components, TensorOperator operation, ArrayList<Object> params) {
+        nodes.add(new CompGraphNode(result, components, operation, params));
     }
 
     public void propagate() {
@@ -23,16 +23,18 @@ public class ComputationalGraph {
     private static class CompGraphNode {
         Tensor result;
         ArrayList<Tensor> components;
-        String operation;
+        TensorOperator operation;
+        ArrayList<Object> params;
 
-        public CompGraphNode(Tensor result, ArrayList<Tensor> components, String operation) {
+        public CompGraphNode(Tensor result, ArrayList<Tensor> components, TensorOperator operation, ArrayList<Object> params) {
             this.result = result;
             this.components = components;
             this.operation = operation;
+            this.params = params;
         }
 
         public void propagateGradient() {
-            if (operation.equals("+")) {
+            if (operation.equals(TensorOperator.ADD)) {
                 for (Tensor component : components) {
                     for (int i = 0; i < component.rows; i++) {
                         for (int j = 0; j < component.cols; j++) {
@@ -40,7 +42,7 @@ public class ComputationalGraph {
                         }
                     }
                 }
-            } else if (operation.equals("*")) {
+            } else if (operation.equals(TensorOperator.MULTIPLY)) {
                 for (Tensor component : components) {
                     for (int i = 0; i < component.rows; i++) {
                         for (int j = 0; j < component.cols; j++) {
@@ -54,22 +56,22 @@ public class ComputationalGraph {
                         }
                     }
                 }
-            } else if (operation.equals("sumRows")) {
-                Tensor base = components.get(0);
+            } else if (operation.equals(TensorOperator.SUMROWS)) {
+                Tensor base = components.getFirst();
                 for (int i = 0; i < base.rows; i++) {
                     for (int j = 0; j < base.cols; j++) {
                         base.gradient[i][j] += result.gradient[0][j];
                     }
                 }
-            } else if (operation.equals("sumCols")) {
-                Tensor base = components.get(0);
+            } else if (operation.equals(TensorOperator.SUMCOLS)) {
+                Tensor base = components.getFirst();
                 for (int i = 0; i < base.rows; i++) {
                     for (int j = 0; j < base.cols; j++) {
                         base.gradient[i][j] += result.gradient[i][0];
                     }
                 }
-            } else if (operation.equals("relu")) {
-                Tensor input = components.get(0);
+            } else if (operation.equals(TensorOperator.RELU)) {
+                Tensor input = components.getFirst();
                 for (int i = 0; i < input.rows; i++) {
                     for (int j = 0; j < input.cols; j++) {
                         if (input.data[i][j] > 0) {
@@ -77,15 +79,12 @@ public class ComputationalGraph {
                         } else {
                             input.gradient[i][j] = 0;
                         }
-
                     }
-
                 }
-            } else if (operation.equals("matMul")) {
+            } else if (operation.equals(TensorOperator.MATMUL)) {
                 Tensor a = components.get(0);
                 Tensor b = components.get(1);
 
-                // Gradient w.r.t. A: grad(C) * B^T
                 Tensor gradA = Tensor.zerosLike(a);
                 for (int i = 0; i < a.rows; i++) {
                     for (int k = 0; k < a.cols; k++) {
@@ -95,7 +94,6 @@ public class ComputationalGraph {
                     }
                 }
 
-                // Gradient w.r.t. B: A^T * grad(C)
                 Tensor gradB = Tensor.zerosLike(b);
                 for (int k = 0; k < a.cols; k++) {
                     for (int j = 0; j < b.cols; j++) {
@@ -105,7 +103,6 @@ public class ComputationalGraph {
                     }
                 }
 
-                // Accumulate gradients to the original tensors
                 for (int i = 0; i < a.rows; i++) {
                     for (int k = 0; k < a.cols; k++) {
                         a.gradient[i][k] += gradA.gradient[i][k];
@@ -116,8 +113,8 @@ public class ComputationalGraph {
                         b.gradient[k][j] += gradB.gradient[k][j];
                     }
                 }
-            } else if (operation.equals("sigmoid")) {
-                Tensor input = components.get(0);
+            } else if (operation.equals(TensorOperator.SIGMOID)) {
+                Tensor input = components.getFirst();
                 for (int i = 0; i < input.rows; i++) {
                     for (int j = 0; j < input.cols; j++) {
                         double sigmoidValue = result.data[i][j];
@@ -126,8 +123,8 @@ public class ComputationalGraph {
                         input.gradient[i][j] += result.gradient[i][j] * derivative;
                     }
                 }
-            } else if (operation.equals("softmax")) {
-                Tensor input = components.get(0);
+            } else if (operation.equals(TensorOperator.SOFTMAX)) {
+                Tensor input = components.getFirst();
                 for (int i = 0; i < input.cols; i++) {
                     for (int j = 0; j < input.rows; j++) {
                         double grad = 0;
@@ -140,23 +137,53 @@ public class ComputationalGraph {
                         input.gradient[j][i] += grad;
                     }
                 }
-            } else if (operation.startsWith("leakyRelu")) {
-                Tensor input = components.get(0);
+            } else if (operation.equals(TensorOperator.LEAKYRELU)) {
+                Tensor input = components.getFirst();
                 double alpha;
-                try {
-                    String[] parts = operation.split("=");
-                    alpha = Double.parseDouble(parts[1]);
-                } catch (Exception e) {
-                    System.err.println("Error parsing alpha for leakyRelu, using default: " + e.getMessage());
-                    alpha = 0.01;
-                }
-
+                alpha = (double) params.getFirst();
                 for (int i = 0; i < input.rows; i++) {
                     for (int j = 0; j < input.cols; j++) {
                         if (input.data[i][j] > 0) {
                             input.gradient[i][j] += result.gradient[i][j];
                         } else {
                             input.gradient[i][j] += result.gradient[i][j] * alpha;
+                        }
+                    }
+                }
+            } else if (operation.equals(TensorOperator.TANH)) {
+                Tensor input = components.getFirst();
+                for (int i = 0; i < input.rows; i++) {
+                    for (int j = 0; j < input.cols; j++) {
+                        double tanhValue = result.data[i][j];
+                        double derivative = 1.0 - (tanhValue * tanhValue);
+                        input.gradient[i][j] += result.gradient[i][j] * derivative;
+                    }
+                }
+            } else if (operation.equals(TensorOperator.GELU)) {
+                Tensor input = components.getFirst();
+                final double SQRT_2_OVER_PI = Math.sqrt(2.0 / Math.PI);
+                final double CONST_0_044715 = 0.044715;
+
+                for (int i = 0; i < input.rows; i++) {
+                    for (int j = 0; j < input.cols; j++) {
+                        double x = input.data[i][j];
+                        double x_cubed = x * x * x;
+                        double inner_term = x + CONST_0_044715 * x_cubed;
+                        double tanh_arg = SQRT_2_OVER_PI * inner_term;
+                        double tanh_val = Math.tanh(tanh_arg);
+                        double derivative_inner_term = 1.0 + 3.0 * CONST_0_044715 * (x * x);
+                        double sech2_val = 1.0 - (tanh_val * tanh_val);
+                        double derivative_tanh_component = sech2_val * SQRT_2_OVER_PI * derivative_inner_term;
+                        double derivative_gelu = 0.5 * (1.0 + tanh_val) + 0.5 * x * derivative_tanh_component;
+                        input.gradient[i][j] += result.gradient[i][j] * derivative_gelu;
+                    }
+                }
+            } else if (operation.equals(TensorOperator.DROPOUT)) {
+                Tensor input = components.getFirst();
+                for (int i = 0; i < input.rows; i++) {
+                    for (int j = 0; j < input.cols; j++) {
+                        if (input.data[i][j] != 0) {
+                            input.gradient[i][j] += result.gradient[i][j];
                         }
                     }
                 }
